# Airplane-Simulator

./: CMakeLists.txt  README.md  airplane-simulator.desktop  deb_airplane-simulator_amd64.control  deb_clean.sh  deb_create.sh  run_qti.bat  run_qti.sh  run_wix.bat  run_wix_bundle.bat  run_wix_clean.bat  wix_alut.wxs  wix_bundle.wxs  wix_main.wxs  wix_osg.wxs
data/aircraft/AW101/: aircraft.xml  flight_dynamics.cfg
data/aircraft/Cessna172/: aircraft.xml  flight_dynamics.cfg
data/fonts/: README.md
data/hud/: hud_config.xml
data/weather/: weather.xml
docs/: weather_system.md
qti/config/: config.xml
resources/: resources.qrc
scripts/: setup.sh
src/: CMakeLists.txt  HUDSystem.cpp  HUDSystem.h  WeatherSystem.cpp  WeatherSystem.h  airplane-simulator.rc  charset_utils.h  defs.h  main.cpp  mscsim.pro  test_weather.cpp
src/Aircraft/: AircraftBase.cpp  AircraftBase.h  AircraftInterface.h  Cessna172.cpp  Cessna172.h
src/Environment/: CelestialSystem.cpp  CelestialSystem.h  CloudLayer.cpp  CloudLayer.h  WeatherDemo.cpp  WeatherExample.cpp  WeatherExample.h  WeatherSystem.cpp  WeatherSystem.h
src/FlightDynamics/: CFDInterface.cpp  CFDInterface.h
src/Navigation/: EFIS.cpp  EFIS.h  NavigationSystem.cpp  NavigationSystem.h
src/UI/: MainWindow.cpp  MainWindow.h  SimulationToolbar.cpp  SimulationToolbar.h
src/cgi/: cgi_GeoTIFF.cpp  cgi_GeoTIFF.h
src/cgi/map/: cgi_Layers.cpp
src/fdm/: fdm_Path.h
src/fdm/utils/: fdm_DataRef.h
src/g1000/: g1000_Path.h
src/gui/: CMakeLists.txt  DialogEnvr.ui  DialogMass.ui  GraphicsWindowQt.cpp  GraphicsWindowQt.h
src/gui/html/: about.html
src/nav/: CMakeLists.txt
src/sfx/: CMakeLists.txt
src/test/: README.md
src/test-rotor/src/: defs.h  test_rotor.pro
src/test-rotor/src/fdm/utils/: fdm_DataRef.h
src/test-rotor/src/gui/: DialogCtrl.cpp
src/test-rotor/src/hid/: hid_Joysticks.cpp  hid_Joysticks.h  hid_Manager.cpp  hid_Manager.h
